--- a/css/style.css
+++ b/css/style.css
@@ -77,3 +77,19 @@ background-color: rgb(2, 131, 88);
     width: 100%;
     border: 2px solid salmon;
 }
+img{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+.circle-profile-layout{
+    height: 38px;
+    width: 38px;
+}
+p{
+    font-size: 13px;
+}
+.last-access{
+    opacity: 45%;
+    font-size: 10px;
+}
