--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ background-color: rgb(2, 131, 88);
     left: 0;
     margin-left: auto;
     margin-right: auto;
+    min-width: 900px;
 
 }
 
@@ -33,7 +34,7 @@ background-color: rgb(2, 131, 88);
 .right-container{
     width: 60vw;
     height: 100%;
-    background-color: blue;
+    background-color:#eaeaea;
 }
 .profile{
 
@@ -64,12 +65,12 @@ background-color: rgb(2, 131, 88);
 .selected-profile{
     height: 7%;
     width: 100%;
-    border: 2px solid salmon;
+    
 }
 .message{
 
     height: 86%;
-    border: 2px solid white;
+    
     background-image: url(../img/mine.jpg);
     
 
@@ -77,7 +78,7 @@ background-color: rgb(2, 131, 88);
 .chat{
     height: 7%;
     width: 100%;
-    border: 2px solid salmon;
+  
 }
 img{
     object-fit: cover;
@@ -94,4 +95,10 @@ p{
 .last-access{
     opacity: 45%;
     font-size: 10px;
+}
+.green-message{
+    min-width: 179px;
+}
+.white-message{
+    min-width: 179px;
 }
