--- a/css/style.css
+++ b/css/style.css
@@ -34,13 +34,14 @@ background-color: rgb(2, 131, 88);
 .right-container{
     width: 60vw;
     height: 100%;
-    background-color:#eaeaea;
+    
 }
 .profile{
 
     height: 7%;
     width: 100%;
-    border: 2px solid salmon;
+    background-color:#eaeaea;
+    border-right: 1px solid #dcdcdc;
 
 }
 .notifications{
@@ -65,6 +66,7 @@ background-color: rgb(2, 131, 88);
 .selected-profile{
     height: 7%;
     width: 100%;
+    background-color:#eaeaea;
     
 }
 .message{
@@ -78,6 +80,7 @@ background-color: rgb(2, 131, 88);
 .chat{
     height: 7%;
     width: 100%;
+    background-color: #f3eeea;
   
 }
 img{
