--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ background-color: rgb(2, 131, 88);
 
     width: 40vw;
     height: 100%;
-    background-color: red;
+    
 
 }
 .right-container{
@@ -47,13 +47,15 @@ background-color: rgb(2, 131, 88);
 .notifications{
     height: 8.5%;
     width: 100%;
-    border: 2px solid rgb(17, 255, 0);
+
+    background-color: #8edafc;
 
 }
 .research{
     height: 4.5%;
     width: 100%;
-    border: 2px solid rgb(2, 4, 1);
+
+    background-color: rgb(239, 239, 239);
 
 }
 .contacts{
@@ -91,7 +93,17 @@ img{
 .circle-profile-layout{
     height: 38px;
     width: 38px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+
 }
+.last-access a {
+    color: black;
+    opacity: 70%;
+}
+
 p{
     font-size: 13px;
 }
