--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,11 @@
 }
 .body-top-bg{
 height: 15vh;
-background-color: rgb(2, 131, 88);
+background-color:#009688;
 }
 .body-bottom-bg{
     height: 85vh;
-    background-color: rgb(204, 224, 217);
+    background-color: #d8dbd5;
 }
 .chat-container{
     display: flex;
@@ -28,6 +28,7 @@ background-color: rgb(2, 131, 88);
 
     width: 40vw;
     height: 100%;
+    
     
 
 }
@@ -61,7 +62,7 @@ background-color: rgb(2, 131, 88);
 .contacts{
     height: 80%;
     width: 100%;
-    border: 2px solid rgb(54, 102, 96);
+    background-color: rgb(233, 233, 233);
 
 }
 
@@ -113,6 +114,7 @@ p{
 }
 .green-message{
     min-width: 179px;
+    background-color: #d5f8b9;
 }
 .white-message{
     min-width: 179px;
