--- a/css/style.css
+++ b/css/style.css
@@ -115,10 +115,14 @@ p{
     opacity: 45%;
     font-size: 10px;
 }
+.last-message{
+    opacity: 45%;
+    font-size: 8px;
+}
 .green-message{
-    min-width: 179px;
+    min-width: 230px;
     background-color: #d5f8b9;
 }
 .white-message{
-    min-width: 179px;
+    min-width: 190px;
 }
