--- a/css/style.css
+++ b/css/style.css
@@ -56,13 +56,14 @@ background-color:#009688;
     height: 4.5%;
     width: 100%;
 
-    background-color: rgb(239, 239, 239);
-
+    background-color:#fafafa;
 }
 .contacts{
     height: 80%;
     width: 100%;
+    overflow-y: scroll;
     background-color: rgb(255, 255, 255);
+
 
 }
 
@@ -78,7 +79,7 @@ background-color:#009688;
 .message{
 
     height: 86%;
-    
+    overflow-y: scroll;
     background-image: url(../img/mine.jpg);
     
 
